S302T400-745 #time 2h Implemented the POST message endpoint. Created the MarketplaceConversationIdPayload, MarketplaceConversationMessagePayload, MarketplaceConversationRepository and MarketplaceConversationMessageRepository. Also added a return comment in the javadoc of the BusinessResource's POST endpoint. Updated the API spec to include the receiver id and card id in the message request body. ?implement ?document
