# api/api-spec.yaml
@@ -2688,31 +2688,29 @@ components:
       type: object
       description: Represents a message in a conversation about a Community Marketplace card between two users.
       required:
-        - messageId
-        - conversationId
         - senderId
         - content
         - created
       properties:
-        messageId:
-          type: integer
-          example: 500
-          description: Unique ID, autogenerated by the system
-        conversationId:
-          type: integer
-          example: 100
-          description: ID of the conversation
         senderId:
           type: integer
           example: 100
-          description: ID of the conversation
-        content:
+          description: ID of the sender
+        recieverId:
           type: integer
-          example: 100
-          description: ID of the conversation
+          example: 101
+          description: ID of the reciever
+        marketplaceCardId:
+          type: integer
+          example: 408
+          description: ID of the marketplace card involved in the conversation
+        content:
+          type: String
+          example: "Hi, I am interested in exchanging some apples for some pears."
+          description: message content
         created:
           type: string
           format: date-time
           example: '2021-07-15T05:10:00Z'
-          description: Date and time of the conversation creation
+          description: date and time of the conversation creation
 
